Typo- skeletion-> skeleton

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,19 +18,19 @@ android {
     flavorDimensions "default"
     productFlavors {
         dev {
-            applicationId "com.androidskeliton.dev"
+            applicationId "com.androidskeleton.dev"
             buildConfigField 'String', 'PREF_NAME', '"pref_dev"'
             buildConfigField 'String', 'FLAVOR_CODE', '"D"'
             buildConfigField 'String', 'URL_HOST_API', '""'
         }
         prod {
-            applicationId "com.androidskeliton"
+            applicationId "com.androidskeleton"
             buildConfigField 'String', 'PREF_NAME', '"pref_prod"'
             buildConfigField 'String', 'FLAVOR_CODE', '"P"'
             buildConfigField 'String', 'URL_HOST_API', '""'
         }
         mock {
-            applicationId "com.androidskeliton.mock"
+            applicationId "com.androidskeleton.mock"
             buildConfigField 'String', 'PREF_NAME', '"pref_mock"'
             buildConfigField 'String', 'FLAVOR_CODE', '"M"'
             buildConfigField 'String', 'URL_HOST_API', '""'
@@ -55,7 +55,7 @@ android {
         versionProps['VERSION_CODE'] = code.toString()
         versionProps.store(versionPropsFile.newWriter(), null)
         defaultConfig {
-            applicationId "com.androidskeliton"
+            applicationId "com.androidskeleton"
             minSdkVersion rootProject.ext.minSdkVersion
             targetSdkVersion rootProject.ext.targetSdkVersion
             versionCode code
