--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,18 +27,19 @@ task clean(type: Delete) {
 }
 ext {
     minSdkVersion = 16
-    targetSdkVersion = 27
-    compileSdkVersion = 27
+    targetSdkVersion = 28
+    compileSdkVersion = 28
 
     //library
-    supportLibraryVersion = '27.1.1'
-    constraintLayout = '1.1.0'
-    junit = '4.12'
+    supportLibraryVersion = '28.0.0'
+    constraintLayout = '2.0.0-beta7'
+    junit = '4.13'
     testRunner = '1.0.1'
-    espressoCore = '3.0.1'
-    dagger2 = '2.14.1'
+    espressoCore = '3.0.2'
+    dagger2 = '2.28'
     retrofit = '2.4.0'
-    rxandroid = '2.0.1'
+    rxjava = '2.1.14'
+    rxandroid = '2.0.2'
     rxandroidAdapter = '1.0.0'
     loggingInterceptor = '3.4.1'
     stetho = '1.5.0'
@@ -47,5 +48,5 @@ ext {
     crashLytics = '2.9.2'
     firebase='11.8.0'
     singleDateAndTimePicker='2.0.4'
-    findBugs='3.0.1'
+    findBugs='3.0.2'
 }
